--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
 spring.data.mongodb.uri=mongodb+srv://bk:Bala181191007@bk-q6qrk.mongodb.net/water_store?retryWrites=true&w=majority
+server.port=8089
